Import of BRYAN/Acme-Bryan-0.02_01 from CPAN.
gitpan-cpan-distribution: Acme-Bryan
gitpan-cpan-version:      0.02_01
gitpan-cpan-path:         BRYAN/Acme-Bryan-0.02_01.tar.gz
gitpan-cpan-author:       BRYAN
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Acme-Bryan
-version:            0.02
+version:            0.02_01
 abstract:           The great new Acme::Bryan!
 author:
     - Bryan Smith <bryan@cpan.org>
